# truthspace_lcm

./: .gitignore  ARCHITECTURE.md  README.md  chat.py  demo_agent.py  pyproject.toml  requirements.txt  run.py  run_api.py  truthspace_lcm_cli.py
api/: __init__.py  models.py  server.py
core/: __init__.py  conversation_context.py  orchestrator.py  query_resolver.py  response_templates.py  self_knowledge.py
design_considerations/: 001_intentional_vs_emergent_geometry.md  002_critical_analysis.md  003_vacuum_forming_hypothesis.md  004_experiment_design.md  005_experimental_results.md  006_dimensionality_findings.md  007_semantic_disambiguation.md  008_conceptual_depth.md  009_projection_weighting.md  010_phi_dimensional_navigation.md  011_automated_knowledge_expansion.md  012_geometric_overlap_handling.md  013_compound_phrase_resolution.md  014_hierarchical_knowledge_navigation.md  015_dynamic_geometric_lcm.md  016_truly_dynamic_geometric_lcm.md  017_stacked_geometric_embeddings.md  018_stacked_lcm_analysis.md  019_holographic_resolution.md  020_scalable_layer_protocol.md  021_structural_similarity_breakthrough.md  022_attractor_repeller_dynamics.md  023_openai_sparse_circuits_comparison.md  024_scalable_phi_ingestion.md  025_cooccurrence_cluster_matching.md  026_generalized_knowledge_ingestion.md  027_pareto_bootstrap.md  028_semantic_tree_architecture.md  032_vsa_binding_extension.md  033_dynamic_geometric_lcm.md  034_bootstrapped_instinct_knowledge.md  035_autonomous_bootstrap.md  036_geometric_qa_pattern_transfer.md  037_spatial_attention_for_importance.md  038_relationship_formation_autobalance.md  039_phi_zipf_duality.md  040_phi_inversion_navigation.md  041_phi_dial_unified_control.md  042_complex_phi_dial.md  043_3d_phi_dial_depth.md  (+9 more)
docs/: AI_ONBOARDING.md  PHILOSOPHY.md  PROBE_EXTRACTION_PROTOCOL.md  RESEARCH_PROGRESS.md  TRUTHSPACE_LCM_PROPOSAL.md
examples/: __init__.py  basic_usage.py
experiments/: README.md  __init__.py  anchor_discovery.py  attractor_repeller_demo.py  autotrain_encoder.py  bootstrapped_tree_encoder.py  convergence_test.py  (+41 more)
(+537 files in other folders)
