[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthspace-lcm"
version = "0.1.0"
description = "Language-Code Model - Natural language to executable code using geometric knowledge encoding"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "TruthSpace Team"}
]
keywords = [
    "natural-language-processing",
    "code-generation",
    "task-automation",
    "knowledge-base",
    "geometric-encoding"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/truthspace-lcm"
Documentation = "https://github.com/yourusername/truthspace-lcm#readme"
Repository = "https://github.com/yourusername/truthspace-lcm.git"
Issues = "https://github.com/yourusername/truthspace-lcm/issues"

[project.scripts]
truthspace-lcm = "truthspace_lcm_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["truthspace_lcm*"]

[tool.setuptools.package-data]
truthspace_lcm = ["knowledge_store/**/*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
